force-app/main/default/objects/TEST_Parcels__x/TEST_Parcels__x.object-meta.xml
<CustomObject>
    <description>TEST_Parcels</description>
    <externalDataSource>ESRI_ArcGIS</externalDataSource>
    <externalName>TEST_Parcels</externalName>
    <label>TEST_Parcels</label>
    <pluralLabel>TEST_Parcels</pluralLabel>
</CustomObject>