force-app/main/default/objects/TEST_Parcels__x/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <externalDeveloperName>City</externalDeveloperName>
    <label>City</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>