force-app/main/default/objects/TEST_Parcels__x/fields/ConstructionDate__c.field-meta.xml
<CustomField>
    <fullName>ConstructionDate__c</fullName>
    <externalDeveloperName>ConstructionDate</externalDeveloperName>
    <label>Construction Date</label>
    <type>DateTime</type>
</CustomField>