force-app/main/default/objects/TEST_Parcels__x/fields/CreationDate__c.field-meta.xml
<CustomField>
    <fullName>CreationDate__c</fullName>
    <externalDeveloperName>CreationDate</externalDeveloperName>
    <label>CreationDate</label>
    <type>DateTime</type>
</CustomField>