force-app/main/default/objects/TEST_Parcels__x/fields/Creator__c.field-meta.xml
<CustomField>
    <fullName>Creator__c</fullName>
    <externalDeveloperName>Creator</externalDeveloperName>
    <label>Creator</label>
    <length>128</length>
    <type>Text</type>
</CustomField>