force-app/main/default/objects/TEST_Parcels__x/fields/EditDate__c.field-meta.xml
<CustomField>
    <fullName>EditDate__c</fullName>
    <externalDeveloperName>EditDate</externalDeveloperName>
    <label>EditDate</label>
    <type>DateTime</type>
</CustomField>