force-app/main/default/objects/TEST_Parcels__x/fields/Editor__c.field-meta.xml
<CustomField>
    <fullName>Editor__c</fullName>
    <externalDeveloperName>Editor</externalDeveloperName>
    <label>Editor</label>
    <length>128</length>
    <type>Text</type>
</CustomField>