force-app/main/default/objects/TEST_Parcels__x/fields/Folio_No__c.field-meta.xml
<CustomField>
    <fullName>Folio_No__c</fullName>
    <externalDeveloperName>Folio_No</externalDeveloperName>
    <label>Folio_No</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>