force-app/main/default/objects/TEST_Parcels__x/fields/GlobalID__c.field-meta.xml
<CustomField>
    <fullName>GlobalID__c</fullName>
    <externalDeveloperName>GlobalID</externalDeveloperName>
    <label>GlobalID</label>
    <length>38</length>
    <type>Text</type>
</CustomField>