force-app/main/default/objects/TEST_Parcels__x/fields/Latitude__c.field-meta.xml
<CustomField>
    <fullName>Latitude__c</fullName>
    <externalDeveloperName>Latitude</externalDeveloperName>
    <label>Latitude</label>
    <precision>15</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>