force-app/main/default/objects/TEST_Parcels__x/fields/Longitude__c.field-meta.xml
<CustomField>
    <fullName>Longitude__c</fullName>
    <externalDeveloperName>Longitude</externalDeveloperName>
    <label>Longitude</label>
    <precision>15</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>