force-app/main/default/objects/TEST_Parcels__x/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <externalDeveloperName>Name</externalDeveloperName>
    <label>Name</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>