force-app/main/default/objects/TEST_Parcels__x/fields/ObjectId__c.field-meta.xml
<CustomField>
    <fullName>ObjectId__c</fullName>
    <externalDeveloperName>ObjectId</externalDeveloperName>
    <label>ObjectId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>