force-app/main/default/objects/TEST_Parcels__x/fields/Parcel_Number__c.field-meta.xml
<CustomField>
    <fullName>Parcel_Number__c</fullName>
    <externalDeveloperName>Parcel_Number</externalDeveloperName>
    <label>Parcel Number</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>