force-app/main/default/objects/TEST_Parcels__x/fields/Post_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Post_Zip_Code__c</fullName>
    <externalDeveloperName>Post_Zip_Code</externalDeveloperName>
    <label>Post/Zip Code</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>