force-app/main/default/objects/TEST_Parcels__x/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <externalDeveloperName>Street</externalDeveloperName>
    <label>Street</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>