force-app/main/default/objects/TEST_Parcels__x/fields/Street_Direction__c.field-meta.xml
<CustomField>
    <fullName>Street_Direction__c</fullName>
    <externalDeveloperName>Street_Direction</externalDeveloperName>
    <label>Street Direction</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>