force-app/main/default/objects/TEST_Parcels__x/fields/Street_Number__c.field-meta.xml
<CustomField>
    <fullName>Street_Number__c</fullName>
    <externalDeveloperName>Street_Number</externalDeveloperName>
    <label>Street Number</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>