force-app/main/default/objects/TEST_Parcels__x/fields/TestText__c.field-meta.xml
<CustomField>
    <fullName>TestText__c</fullName>
    <externalDeveloperName>TestText</externalDeveloperName>
    <label>Text</label>
    <length>128</length>
    <type>Text</type>
</CustomField>