force-app/main/default/objects/TEST_Parcels__x/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <externalDeveloperName>Unit</externalDeveloperName>
    <label>Unit</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>